ecmascript/parser/tests/typescript-errors/tsc/classes/indexMemberDeclarations/privateIndexer/input.ts.stderr
error[1005]: Expected ']'
 --> $DIR/tests/typescript-errors/tsc/classes/indexMemberDeclarations/privateIndexer/input.ts:4:17
  |
4 |     private [x: string]: string;
  |                 ^^^^^^

error[1005]: Expected ']'
 --> $DIR/tests/typescript-errors/tsc/classes/indexMemberDeclarations/privateIndexer/input.ts:8:17
  |
8 |     private [x: number]: string;
  |                 ^^^^^^

error[1005]: Expected ']'
  --> $DIR/tests/typescript-errors/tsc/classes/indexMemberDeclarations/privateIndexer/input.ts:12:17
   |
12 |     private [x: string]: T;
   |                 ^^^^^^

